# r-osbuild

./: Cargo.toml  NEWS.md  README.md
.github/workflows/: fmt.yml  test.yml
src/: lib.rs  manifest.rs
