[package]
name = "r-osbuild"
version = "0.1.0"

authors = [
        "David Rheinsberg <david.rheinsberg@gmail.com>",
]
categories = [
        "compilers",
        "development-tools",
        "filesystem",
        "os",
        "parser-implementations",
]
description = "Build-Pipelines for Operating System Artifacts"
edition = "2021"
homepage = "https://osbuild.org"
keywords = [
        "artifacts",
        "build",
        "filesystem",
        "image",
        "os",
]
license = "Apache-2.0 OR LGPL-2.1-or-later"
repository = "https://github.com/osbuild/r-osbuild"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
features = ["arbitrary_precision", "float_roundtrip", "preserve_order", "raw_value"]
